# nina

./: .gitignore  .travis.yml  README.rst  setup.cfg  tox.ini
docs/: Makefile  apidoc.rst  conf.py  index.rst  make.bat  warning.rst
examples/: blog.py  blog.sqlite3  hello.py  hello.sqlite3  routes.py
examples/templates/: blog.html  post-detail.html  post-list.html
src/nina/: __init__.py  __main__.py  app.py  cli.py  configuration.py  project.py  router.py  runners.py
src/nina/django_project/: settings.py  urls.py  wsgi.py
src/nina/django_project/jinja2/: base.html  index.html
src/nina/global_mods/: wsgi.py
tests/: __main__.py  test_miniserver.py
